# mcpServe

./: README.md  SKILL.md  install.ps1  package-lock.json  package.json  skill.json  test-skill.ps1
.trae/skills/openclaw-wechat-mp-mcp/: SKILL.md
.trae/skills/openclaw-wechat-publish/: SKILL.md
xhs-mcp-skill/: SKILL.md  openclaw.plugin.json
xhs-mcp-skill/config/: default.json
xhs-mcp-skill/mcp-server/: pyproject.toml
xhs-mcp-skill/mcp-server/openclaw_xhs_mcp/: __main__.py  server.py
xhs-mcp-skill/mcp-server/scripts/: xhs_publish.py
your-mcp-skill/: .gitignore  INSTALL.md  SKILL.md  openclaw.plugin.json  package-lock.json  package.json
your-mcp-skill/config/: default.json
your-mcp-skill/docs/: README.md  TESTING.md
your-mcp-skill/examples/: basic-usage.json
your-mcp-skill/mcp-server/: pyproject.toml
your-mcp-skill/mcp-server/openclaw_wechat_mcp/: __init__.py  __main__.py  config.py  index.py  server.py
your-mcp-skill/mcp-server/openclaw_wechat_mcp/tools/: api_publish.py  browser.py
your-mcp-skill/mcp-server/scripts/: account_manager.py  chrome_launcher.py  login_and_wait.py  publish_end_to_end.py  xhs_publish.py
your-mcp-skill/tests/: conftest.py
your-mcp-skill/tests/unit/: test_config.py  test_login_stage.py  test_types.py
