[project]
name = "openclaw-wechat-mp-mcp"
version = "0.1.0"
description = "MCP server for WeChat MP web automation (QR login + step workflows)."
readme = "../docs/README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
  "playwright>=1.42.0",
  "pydantic>=2.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openclaw_wechat_mcp"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
asyncio_mode = "auto"

